# burn-gradient-demo-app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  serve-all.sh
assets/: main.css
bruno/: Agent 1 - Process Data.bru  Agent-Status.bru  Agent2-Process.bru  Agent3-Process.bru  Agent4-Process.bru  Agent5-Process.bru
models/: README.md
public/: index.html.backup
src/: actors.rs  agents.rs  main.rs  mcp_server.rs  vae.rs
src/app/: desktop.rs  desktop_server.rs  mod.rs  web.rs  web_server.rs
src/shared/: api.rs  communication.rs  mod.rs
