[package]
name = "pattern_clock"
version = "0.1.0"
authors = ["vecnode <vecnode@vecnode>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
ractor = "0.15"
reqwest = { version = "0.12", features = ["json"] }
pulldown-cmark = "0.9"
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn = { version = "0.20.1", features = ["autodiff", "wgpu"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["rt"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "axum", "tower", "tower-http"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
