[package]
name = "pattern_clock"
version = "0.1.0"
authors = ["vecnode <vecnode@vecnode>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ractor = "0.15"
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn = { version = "0.20.1", features = ["autodiff", "wgpu"] }
burn-train = "0.20.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
ffmpeg-next = { version = "6.1", optional = true }
walkdir = "2"
rfd = "0.14"
image = "0.25"
rand = "0.8"

# WASM dependencies removed - desktop-only app

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "axum", "tower", "tower-http"]
server = ["dioxus/server"]
ffmpeg = ["ffmpeg-next"]
