[package]
name = "burn-gradient-demo-app"
version = "0.1.0"
authors = ["vecnode <vecnode@vecnode>"]
edition = "2021"
license = "MIT"

[dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0", features = ["derive"] }
ractor = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn = { version = "0.20.1", features = ["autodiff", "wgpu"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
ffmpeg-next = { version = "6.1", optional = true }
walkdir = "2"
rfd = "0.14"
rand = "0.8"

# WASM dependencies removed - desktop-only app

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
ffmpeg = ["ffmpeg-next"]
